name:                ingest-nist-algo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adarqui/ingest-nist-algo#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.Api.Ingest.NistAlgo
                       LN.Api.Ingest.NistAlgo.Internal
                       LN.Api.Ingest.NistAlgo.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , lnotes-api
                     , lnotes-sanitize
                     , lnotes-validate
                     , haskell-lnotes-types
                     , hxt
                     , ingest-shared
                     , text
  default-language:    Haskell2010

executable ingest-nist-algo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ingest-nist-algo
  default-language:    Haskell2010

test-suite ingest-nist-algo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ingest-nist-algo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ingest-nist-algo
